tests/programs/symex/a5-test-cases/pass/symex_control_pass2.rice
// symex
#[symex]
fn example(x: int) {
  if x > 0 {
    ()
  } else {
    if x == 1 {
      assert(false)
    }
  }
}